--- a/bayside/scss/colors.scss
+++ b/bayside/scss/colors.scss
@@ -1,5 +1,6 @@
 $main-color1: #fff;
 $main-color2: #333;
+$main-color3: #002033;
 $burger-bg: #D2E1EF;
 $btn-color1: #34A8E9;
 $btn-color2: #1a88c5;
