--- a/bayside/scss/fonts.scss
+++ b/bayside/scss/fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Playfair+Display:wght@700&family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Playfair+Display:wght@700&family=Roboto:wght@400;500;700&display=swap&family=DM+Serif+Display&display=swap');
