--- a/hackathon/src/assets/styles/global.scss
+++ b/hackathon/src/assets/styles/global.scss
@@ -3,3 +3,11 @@
 @import "_fonts";
 @import "_variables";
 @import "_mixins";
+
+.wrapper{
+    max-width: 1280px;
+    width: 100%;
+    padding: 0 15px;
+    margin:  0 auto;
+    position: relative;
+  }
