--- a/hackathon/src/assets/styles/_colors.scss
+++ b/hackathon/src/assets/styles/_colors.scss
@@ -10,3 +10,6 @@ $text-color: #252525;
 $player-color: #075050;
 
 $row-border-color: #E0E0E0;
+
+$player-bg-color: #F7F5EE;
+$player-controls-color: #075050;
