--- a/hackathon/src/assets/styles/global.scss
+++ b/hackathon/src/assets/styles/global.scss
@@ -5,9 +5,15 @@
 @import "_mixins";
 
 .wrapper{
-    max-width: 1280px;
-    width: 100%;
-    padding: 0 15px;
-    margin:  0 auto;
-    position: relative;
+  max-width: 1280px;
+  width: 100%;
+  padding: 0 15px;
+  margin:  0 auto;
+  position: relative;
+}
+
+@media (max-width: 768px){
+  .wrapper{
+    padding: 0 10px;
   }
+}
